# PLM-Lite

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  cli_entry.py  docker-compose.local.yml  docker-compose.yml  gui_entry.py  plm_server.py  plmlite.ini  pyproject.toml  requirements.txt  run.bat  schema.sql  start.bat  start_server.bat
.github/workflows/: build.yml  deploy.yml  release.yml
app/: auth.py  config.py  database.py  export.py  files.py  main.py  models.py  permissions.py  server_entry.py
app/routers/: admin_router.py  auth_router.py  cache_router.py  documents_router.py  parts_router.py  relationships_router.py  users_router.py
docs/: v1.1.0-release-notes.md
nx_hook/: install_hook.md  plm_hook.py
src/plmlite/: __init__.py  __main__.py  backup.py  checkout.py  cli.py  config.py  database.py  gui.py  lifecycle.py  main.py  migrate_vault.py  parser.py  server.py  watcher.py
src/plmlite/static/: app.html  login.html
src/plmlite/static/js/: admin.js  api.js  documents.js  parts.js  relationships.js  temp.js  utils.js
static/: app.html  index.html
static/css/: style.css
static/js/: admin.js  api.js  documents.js  parts.js  relationships.js  utils.js
tests/: test_basic.py  test_v2.py
workstation_agent/: agent.py  install.ps1
