[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plmlite"
version = "2.0.0"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
description = "Python-based Product Lifecycle Management for NX12 CAD datasets"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

dependencies = [
    "watchdog>=3.0.0",
    "customtkinter>=5.2.0",
]

[project.urls]
"Homepage" = "https://github.com/kkers42/PLM-Lite"

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-mock"]
dev  = ["pyinstaller>=5.0.0"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[project.scripts]
plmlite     = "plmlite.cli:main"
plmlite-gui = "plmlite.gui:launch"
